--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
         "@tailwindcss/typography": "^0.5.7",
         "@tanstack/query-core": "^4.14.5",
         "@tanstack/react-query": "^4.14.5",
-        "@trpc/client": "^10.0.0-rc.1",
-        "@trpc/react-query": "^10.0.0-rc.1",
-        "@trpc/server": "^10.0.0-rc.1",
+        "@trpc/client": "^10.45.2",
+        "@trpc/react-query": "^10.45.2",
+        "@trpc/server": "^10.45.2",
         "@types/react-dom": "^18.2.7",
         "argon2": "^0.31.0",
-        "next": "^13.0.1-canary.3",
+        "next": "^14.2.7",
         "next-auth": "^4.22.3",
         "npm-run-all": "^4.1.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-hook-form": "^7.45.2",
         "superjson": "^1.10.1",
         "zod": "^3.19.1"
