--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
     "next": "14.0.4",
+    "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
