--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@types/file-saver": "^2.0.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "file-saver": "^2.0.5",
+    "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
