API: GST Number api added

--- a/.env-sample.txt
+++ b/.env-sample.txt
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.uzapyutenknggogexmmw.supabase.co:5432/postgres"
 JWT_SECRET = ""
+GST_API=""
