--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@types/file-saver": "^2.0.7",
     "@types/jspdf": "^2.0.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
