--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "jspdf-autotable": "^3.8.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
     "next": "14.0.4",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18",
