--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf-autotable": "^3.8.3",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
     "next": "14.0.4",
