--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
