--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "country-state-city": "^3.2.1",
+    "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
@@ -38,6 +39,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
