--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
