--- a/.env-sample.txt
+++ b/.env-sample.txt
@@ -5,5 +5,15 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.uzapyutenknggogexmmw.supabase.co:5432/postgres"
-JWT_SECRET = ""
+AUTH_SECRET=""
+JWT_SECRET=""
 GST_API=""
+
+NODEMAILER_HOST="smtp.ethereal.email"
+NODEMAILER_PORT=587
+NODEMAILER_EMAIL_USER="cletus.sporer58@ethereal.email"
+NODEMAILER_EMAIL_PASSWORD="j8uStr4HcXtp7YvMd4"
+
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_EMAIL_VERIFICATION_ENDPOINT=/verify-email
+NEXT_PUBLIC_RESET_PASSWORD_ENDPOINT=/reset-password
