--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.5.0",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -28,6 +29,7 @@
     "@types/jspdf": "^2.0.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "country-state-city": "^3.2.1",
@@ -44,6 +46,8 @@
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.21",
+    "nodemailer": "^6.9.15",
     "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
     "react-dom": "^18",
@@ -54,17 +58,21 @@
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
