--- a/.env-sample.txt
+++ b/.env-sample.txt
@@ -9,6 +9,9 @@ AUTH_SECRET=""
 JWT_SECRET=""
 GST_API=""
 
+EMAIL_VERIFICATION_TOKEN_EXPIRY_TIME_MS=3600000 # 1 hour (3600 * 1000)
+PASSWORD_RESET_TOKEN_EXPIRY_TIME_MS=3600000 # 1 hour (3600 * 1000)
+
 NODEMAILER_HOST="smtp.ethereal.email"
 NODEMAILER_PORT=587
 NODEMAILER_EMAIL_USER="cletus.sporer58@ethereal.email"
