--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
-    "next": "14.0.4",
+    "next": "^14.2.12",
     "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
     "react-dom": "^18",
