--- a/.env-sample.txt
+++ b/.env-sample.txt
@@ -7,3 +7,17 @@
 DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.uzapyutenknggogexmmw.supabase.co:5432/postgres"
 JWT_SECRET = ""
 GST_API=""
+
+AUTH_SECRET=""
+
+EMAIL_VERIFICATION_TOKEN_EXPIRY_TIME_MS=3600000 # 1 hour (3600 * 1000)
+PASSWORD_RESET_TOKEN_EXPIRY_TIME_MS=3600000 # 1 hour (3600 * 1000)
+
+NODEMAILER_HOST=
+NODEMAILER_PORT=
+NODEMAILER_EMAIL_USER=""
+NODEMAILER_EMAIL_PASSWORD=''
+
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_EMAIL_VERIFICATION_ENDPOINT=/auth/verify-email
+NEXT_PUBLIC_RESET_PASSWORD_ENDPOINT=/auth/reset-password
