--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "lucide-react": "^0.300.0",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
-    "next": "^14.2.12",
-    "prisma": "^5.19.1",
+    "next": "14.0.4",
     "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
     "react-dom": "^18",
@@ -71,6 +70,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
