--- a/.env-sample.txt
+++ b/.env-sample.txt
@@ -21,3 +21,4 @@ NODEMAILER_EMAIL_PASSWORD=''
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_EMAIL_VERIFICATION_ENDPOINT=/auth/verify-email
 NEXT_PUBLIC_RESET_PASSWORD_ENDPOINT=/auth/reset-password
+UPLOADTHING_TOKEN=
