--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@types/file-saver": "^2.0.7",
     "@types/jspdf": "^2.0.0",
+    "@uploadthing/react": "^7.0.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -56,6 +57,7 @@
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.0.2",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
