--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "npx prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:migrate": "tsx src/drizzle/migrate.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.5.0",
+    "@auth/drizzle-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.3",
+    "@neondatabase/serverless": "^0.9.5",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -34,6 +37,7 @@
     "clsx": "^2.0.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.33.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
@@ -74,6 +78,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
