--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.0.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
+    "decimal.js": "^10.4.3",
     "drizzle-orm": "^0.33.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
@@ -52,9 +53,9 @@
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "next": "^14.2.12",
-    "prisma": "^5.19.1",
     "next-auth": "^5.0.0-beta.21",
     "nodemailer": "^6.9.15",
+    "prisma": "^5.19.1",
     "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
     "react-dom": "^18",
@@ -65,8 +66,8 @@
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0",
     "uploadthing": "^7.0.2",
+    "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
