--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "drizzle-kit generate:pg",
+    "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/drizzle/migrate.ts"
   },
   "dependencies": {
@@ -15,7 +15,6 @@
     "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.3.3",
     "@neondatabase/serverless": "^0.9.5",
-    "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -55,8 +54,6 @@
     "next": "^14.2.12",
     "next-auth": "^5.0.0-beta.21",
     "nodemailer": "^6.9.15",
-    "prisma": "^5.19.1",
-    "prisma-dbml-generator": "^0.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
