Try Fix: getToken returning, null after deploying on vercel

--- a/.env-sample.txt
+++ b/.env-sample.txt
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.uzapyutenknggogexmmw.supabase.co:5432/postgres"
+AUTH_TRUST_HOST=true
 AUTH_SECRET=""
 JWT_SECRET=""
 GST_API=""
